syntax = "proto3";

package chat;

option go_package = "github.com/cx333/game-works/pkg/proto/chat";

message ChatMessage {
  string from = 1;  // 发送者 playerId
  string to = 2; // 接收者 playerId (私聊)
  string room_id = 3; // 房间ID (房间群聊)
  int32 type = 4; // 消息类型 1文本 2图片 3语音...
  int32 channel = 5; // 频道类型：world / room / private
  string content = 6; // 文本内容
  string media_url = 7; // 媒体文件URL
  int64 timestamp = 8; // 时间戳，服务器填充
}
